[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depthtrack"
version = "1.2.0"
description = "DepthTrack: YOLO detection, Depth Anything V2, BEV, and collision-risk estimation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Harsh Patil" }]
keywords = ["computer-vision", "adas", "depth-estimation", "object-detection", "dashcam", "autonomous-driving"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.24.4",
    "Pillow>=10.0",
    "PyYAML>=6.0",
    "tqdm>=4.65",
    "scipy>=1.10",
    "torch==2.2.0",
    "torchvision==0.17.0",
    "transformers==4.40.2",
    "timm>=0.9",
    "accelerate>=0.27",
    "opencv-python>=4.8",
    "ultralytics>=8.1",
    "supervision>=0.18",
    "ffmpeg-python>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.3", "mypy>=1.8"]

[project.scripts]
depthtrack = "depthtrack.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/DepthTrack"
Issues = "https://github.com/your-username/DepthTrack/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
depthtrack = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true
